did some refactoring changing queries to paths. finished swagger doc
