# src/handlers/company_handlers.go
@@ -6,11 +6,10 @@ import (
 )
 
 func InitCompanyRoutes(r *gin.Engine) {
+	r.PATCH("/company", api.UpdateCompany)
 
-	r.PATCH("/company", api.Update_company)
-
-	r.POST("/company", api.Add_company)
-	r.GET("/company", api.Get_company)
+	r.POST("/company", api.AddCompany)
+	r.GET("/company", api.GetCompany)
 	r.POST("/company/distance", api.GetCompanyDistance)
 
 	r.GET("/company/info", api.AuthGetCompany)
@@ -19,12 +18,12 @@ func InitCompanyRoutes(r *gin.Engine) {
 	r.POST("/company/login", api.CompanyLogin)
 
 	// with company token
-	r.POST("/company/slots", api.Add_slots)
-	r.GET("/company/slots", api.Get_slots)
-	r.PATCH("/company/slots", api.Update_slot)
+	r.POST("/company/slots", api.AddSlots)
+	r.GET("/company/slots", api.GetSlots)
+	r.PATCH("/company/slots", api.UpdateSlot)
 
 	// get specific slot
-	r.GET("/company/slots/id", api.Get_slot)
+	r.GET("/company/slots/id", api.GetSlot)
 
 	// scan qr code
 	r.POST("/company/code/:code/verify", api.VerifyCode)
